log
Thu 16 May 2024 09:37:14 PM UTC: 
 tests:  0|5
total_score: 0/70
dcb5b5f
Thu 16 May 2024 09:49:53 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:17: error: unused variable ‘nuevo_estado’ [-Werror=unused-variable]
   61 |           Node *nuevo_estado = copy(n);
      |                 ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6014a38
Thu 16 May 2024 09:51:21 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:17: error: unused variable ‘nuevo_estado’ [-Werror=unused-variable]
   61 |           Node *nuevo_estado = copy(n);
      |                 ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
24e29f5
Thu 16 May 2024 09:53:34 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
4e50cab
Thu 16 May 2024 09:55:05 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ab85e6d
Thu 16 May 2024 09:55:37 PM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
1bf12b6
Thu 16 May 2024 10:14:31 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: unused variable ‘arr2’ [-Werror=unused-variable]
   49 |   int arr2[10];
      |       ^~~~
sudoku.c:48:7: error: variable ‘arr1’ set but not used [-Werror=unused-but-set-variable]
   48 |   int arr1[10];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
8d5f75b
Sat 18 May 2024 01:12:45 PM UTC: 
 sudoku.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
72b1594
Sat 18 May 2024 01:23:46 PM UTC: 
 sudoku.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0f133b5
Sat 18 May 2024 01:24:58 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
4d2ddbe
Sat 18 May 2024 01:25:28 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:83:22: error: ‘k’ undeclared (first use in this function)
   83 |       int fil = 3 * (k / 3) + (p / 3);
      |                      ^
sudoku.c:83:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
762e5d3
Sat 18 May 2024 01:27:28 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
e928133
Sat 18 May 2024 01:30:48 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
94c8e4c
Sat 18 May 2024 01:35:05 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
e4bc0d1
Sat 18 May 2024 01:36:51 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
d70d3b3
Sat 18 May 2024 01:37:41 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
08b8d1e
Sat 18 May 2024 01:38:36 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
f39a9cd
Sat 18 May 2024 01:40:56 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
73687f4
Sat 18 May 2024 01:43:53 PM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
test.c: In function ‘is_final’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0b5b33c
Sat 18 May 2024 01:44:23 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
938c740
Sat 18 May 2024 01:54:20 PM UTC: 
 sudoku.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
 tests:  0|0
fee1edd
Sat 18 May 2024 02:02:23 PM UTC: 
 sudoku.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|0
f790afa
Sat 18 May 2024 02:04:52 PM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:136:10: error: unused variable ‘temp’ [-Werror=unused-variable]
  136 |   Node * temp = top(S);
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
baba552
Sat 18 May 2024 02:05:16 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
b70ebd3
Sat 18 May 2024 02:07:29 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
730f78c
Sat 18 May 2024 02:11:54 PM UTC: 
 sudoku.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
 tests:  7|1
total_score: 55/70
6ee67a7
Sat 18 May 2024 02:13:36 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
7ef9d81
